Added filter and pagination

--- a/frontend/src/components/ProductItem/ProductItem.module.scss
+++ b/frontend/src/components/ProductItem/ProductItem.module.scss
@@ -274,3 +274,15 @@
     }
 }
 
+
+
+//! DELETE : JUST A TEST
+.show {
+    display: block;
+}
+
+
+//? manually display none
+.none {
+    display: none;
+}
