--- a/frontend/src/components/ProductList/ProductList.module.scss
+++ b/frontend/src/components/ProductList/ProductList.module.scss
@@ -107,3 +107,30 @@
         grid-auto-rows: minmax(100px, auto); 
     }
 }
+
+//title
+
+.titleContainer {
+    margin: 4.5rem auto;
+  }
+
+  .title {
+    font-size: 2.5rem;
+    padding-bottom: 1rem;
+  }
+
+.center {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  
+  }
+
+  .subTitle {
+    font-size: 1.3rem;
+  }
+
+  .cStyle {
+    text-decoration: none;
+    color: var(--mainDark);
+   }
