--- a/frontend/src/App.module.scss
+++ b/frontend/src/App.module.scss
@@ -19,8 +19,10 @@ body {
 }
 
 :root {
-    --grey: rgba(97, 97, 97, 0.404);
-    --lightGrey: grey;
+    --lightBlack: #242526;
+    --black: #1c1b1b;
+    --grey: #484a4d;
+    --lightGrey:  #afafaf;
     --mainBlue: #2a2a72;
     --lightBlue: #009ffd;
     --mainWhite: #ececec;
