--- a/frontend/src/App.module.scss
+++ b/frontend/src/App.module.scss
@@ -15,8 +15,10 @@ body {
     // font-family: 'Raleway', sans-serif;
      font-family: 'Open Sans', sans-serif;
     background-color: var(--mainWhite);
-
+    position:relative;
+    top:5rem;
 }
+
 
 :root {
     --lightBlack: #242526;
