--- a/frontend/src/components/Banner/Banner.module.scss
+++ b/frontend/src/components/Banner/Banner.module.scss
@@ -6,11 +6,14 @@
 
 
 .slider {
+    border-radius: 5px;
     margin:2rem auto;
     //border: .1px solid var(--lightGrey);
     position: relative;
     // width: 70%;
-    max-width: 120rem;
+
+    //top: 5rem;
+    max-width: 115rem;
     height: 35rem;
     //box-sizing: border-box;
     // margin: 0;
@@ -26,6 +29,7 @@
 }
 
 .slide {
+
     position:relative;
    // border: 1px solid blue;
     min-width: 100%;
@@ -172,6 +176,8 @@
 
 //? Imgbanner:
 .bContainer{
+    overflow:hidden;
+
     display: grid;
     // height: 100%;
     // grid-template-columns: repeat(5, 1fr);
@@ -182,6 +188,7 @@
     }
 
 .imgStyles {
+
     width: 100%;
     height: 100%;
     object-fit: cover;
@@ -195,6 +202,7 @@
 
 
 .block {
+    
 align-items: center;
 text-decoration: none;
 // width: 100%;
