updated mainPage links

--- a/frontend/src/App.module.scss
+++ b/frontend/src/App.module.scss
@@ -21,6 +21,7 @@ body {
 
 
 :root {
+    --hoverColor: #ffc60032;
     --lightBlack: #242526;
     --black: #1c1b1b;
     --grey: #484a4d;
@@ -29,7 +30,7 @@ body {
     --lightBlue: #009ffd;
     --mainWhite: #ececec;
     --mainDark: #232528;
-    --mainYellow: #ffc60032;
+    --mainYellow: #ffc60032; //todo REMOVE
     --orange: orange;
     --red: red;
 }
