--- a/frontend/src/components/MainPage/MainPage.module.scss
+++ b/frontend/src/components/MainPage/MainPage.module.scss
@@ -1,9 +1,166 @@
 
 
 
-.mainDispContainer {
+// .mainDispContainer {
 
- }
+//  }
+
+// .displayContainer {
+//     display: grid;
+//     grid-auto-rows: auto;
+//     grid-auto-rows: minmax(100px, auto);
+//     grid-gap: 2.5rem;
+//     grid-template-columns: repeat(3, 1fr);
+//     padding: 2rem 0;
+//     margin: 0 auto 10rem auto;
+//     max-width: 115rem;
+
+
+//    // padding-bottom: 2rem;
+//     overflow: hidden;
+//     box-sizing: border-box;
+//     // border: 1px solid #ddd;
+// }
+
+
+// .grid {
+//     display: grid;
+
+ 
+//     grid-auto-rows: auto;
+//     grid-auto-rows: minmax(100px, auto);
+//     grid-gap: 2.5rem;
+//     grid-template-columns: repeat(4, 1fr);
+    
+//     padding: 2rem 2rem;
+//     margin: 0 auto 0 auto;
+//     max-width: 115rem;
+// }
+
+// // .gridFlip {
+// //     display: grid;
+// //     max-width: 120rem;
+// //     grid-template-columns: repeat(1, 1fr);
+// //     grid-gap: 2.5rem;
+// //     padding: 2rem 2rem;
+// //     margin: 0 auto 0 auto;
+// // }
+
+// //? for 3 shop links
+
+
+// .imgOverlay {
+//     border-radius: 5px;
+//         height: 250px;
+//           display: grid;
+//           position: relative;
+//       overflow: hidden;
+
+//     .image {
+//         border-radius: 5px;
+//         grid-column: 1 / -1;
+//         grid-row: 1 / -1;
+//         width: 100%;
+//         height: 100%;
+//         object-fit: cover;
+//         background-position: center;
+//     }
+
+
+
+
+//     .overlayContainer {
+//         opacity: 1;
+    
+//         //background-color: black;
+//         grid-column: 1 / -1;
+//         grid-row: 1 / -1;
+//         position: relative;
+//         display: grid;
+//         grid-template-columns: repeat(4, 1fr);
+//         grid-template-rows: repeat(4, 1fr);
+//         transition: all 250ms ease-out;
+        
+//         &:hover {
+//             opacity: 1;
+//            background-color:var(--hoverColor);
+//         }
+    
+//         // .liked {
+           
+//         //     z-index: 10;
+//         //     top: 20px;
+//         //     right: 20px;
+//         //    position: absolute;
+//         //    // display: block;
+//         //     //background: none;
+//         // }
+
+//         .overlayWrapper {
+//             z-index: 5;
+//           //  background-color: #ffc60032;
+//             grid-column: 1 / -1;
+//             grid-row: 1 / -1;
+//             position: relative;
+            
+//         }
+
+//         .bwrapper {
+//             position: absolute;
+//             left: 50%;
+//             top: 50%;
+//             transform: translate(-50%, -50%);
+        
+            
+//                 z-index: 5;
+//             min-width: 1.5rem;
+        
+//              display: flex;
+//             flex-direction: column;
+
+//             .mainButton {
+//                 z-index: 3;
+//                 // position: relative;
+//                  //margin: 20px 0;
+//                 // left: 0;
+//               //  align-self: center;
+                
+//                 // grid-column: 2 / 3;
+//                 // grid-row: 2 / 3;
+//                 //align-items: center;
+//               //  margin-bottom: 5px;
+//                 //border: none;
+//                 border-radius: .5rem;
+//                 cursor:pointer;
+//                 text-decoration: none;
+//              //   background: none;
+//               //  border: 2px solid red;
+//                 color:var(--mainDark);
+//                 text-transform: uppercase;
+//                 background:var(--mainWhite);
+//                 padding: 1rem 1.5rem;
+
+//                 &:hover {
+//                     transition: all 250ms ease-out;
+//                     background-color:var(--mainDark);
+//                     color: var(--mainWhite);
+//                 }
+//             }
+//         }
+    
+//     }
+// }
+
+
+
+//* TEST
+//! TEST
+//? TEST
+//todo  TEST
+//so far so good.
+
+
+
 
 .displayContainer {
     display: grid;
@@ -51,11 +208,30 @@
 
 .imgOverlay {
     border-radius: 5px;
-        height: 400px;
+        height: 250px;
           display: grid;
           position: relative;
-      
+      overflow: hidden;
 
+        &:hover {
+            .image {
+              //  transition: transform 800ms ease;
+                transform: scale(1.2);
+            }
+            .overlayWrapper{
+                background-color:var(--hoverColor);
+            }
+            .bwraper {
+                .mainButton {
+
+                
+                    transition: all 250ms ease-out;
+                    background-color:var(--mainDark);
+                    color: var(--mainWhite);
+                
+                }
+            }
+        }
     .image {
         border-radius: 5px;
         grid-column: 1 / -1;
@@ -64,26 +240,15 @@
         height: 100%;
         object-fit: cover;
         background-position: center;
+        transition: transform 800ms ease;
     }
 
 
 
-
-    .overlayContainer {
-        opacity: 0;
-    
-        //background-color: black;
-        grid-column: 1 / -1;
-        grid-row: 1 / -1;
-        position: relative;
-        display: grid;
-        grid-template-columns: repeat(4, 1fr);
-        grid-template-rows: repeat(4, 1fr);
-        transition: all 250ms ease-out;
-        
-        &:hover {
-            opacity: 1;
-        }
+        // &:hover {
+        //     opacity: 1;
+        //    background-color:var(--hoverColor);
+        // }
     
         // .liked {
            
@@ -96,13 +261,62 @@
         // }
 
         .overlayWrapper {
-            z-index: 5;
-            background-color: #ffc60032;
+            opacity: 1;
+    
+            //background-color: black;
             grid-column: 1 / -1;
             grid-row: 1 / -1;
             position: relative;
+            display: grid;
+            grid-template-columns: repeat(4, 1fr);
+            grid-template-rows: repeat(4, 1fr);
+            transition: all 250ms ease-out;
             
         }
+
+        .bwrapper {
+            position: absolute;
+            left: 50%;
+            top: 50%;
+            transform: translate(-50%, -50%);
+        
+            
+                z-index: 5;
+            min-width: 1.5rem;
+        
+             display: flex;
+            flex-direction: column;
+
+            .mainButton {
+                z-index: 3;
+                // position: relative;
+                 //margin: 20px 0;
+                // left: 0;
+              //  align-self: center;
+                
+                // grid-column: 2 / 3;
+                // grid-row: 2 / 3;
+                //align-items: center;
+              //  margin-bottom: 5px;
+                //border: none;
+                border-radius: .5rem;
+                cursor:pointer;
+                text-decoration: none;
+             //   background: none;
+              //  border: 2px solid red;
+                color:var(--mainDark);
+                text-transform: uppercase;
+                background:var(--mainWhite);
+                padding: 1rem 1.5rem;
+                transition: all 250ms ease-out;
+
+                &:hover {
+                  //  transition: all 250ms ease-out;
+                    background-color:var(--mainDark);
+                    color: var(--mainWhite);
+                }
+            }
+        }
     
-    }
+    
 }
