--- a/frontend/src/components/mainPageSales/MainSales.module.scss
+++ b/frontend/src/components/mainPageSales/MainSales.module.scss
@@ -1,7 +1,7 @@
 //? Main container
 .container {
     padding-bottom: 2rem;
- 
+    border-radius: 5px;
     overflow: hidden;
     box-sizing: border-box;
     // border: 1px solid #ddd;
