--- a/frontend/src/components/mainPageSales/MainSales.module.scss
+++ b/frontend/src/components/mainPageSales/MainSales.module.scss
@@ -22,6 +22,7 @@
      //display: block;
     // overflow: hidden;
      position: relative;
+     
  }
  
  .image {
@@ -31,6 +32,7 @@
      height: 100%;
      object-fit: cover;
      background-position: center;
+     border-radius: .5rem;
  }
  
  //? container for image overlay
@@ -45,6 +47,7 @@
      grid-template-columns: repeat(4, 1fr);
      grid-template-rows: repeat(4, 1fr);
      transition: all 250ms ease-out;
+     
      
      &:hover {
          opacity: 1;
@@ -160,6 +163,7 @@
      grid-column: 1 / -1;
      grid-row: 1 / -1;
      position: relative;
+     border-radius: .5rem;
  }
  
  //? button wrapper
