--- a/frontend/src/components/MainPage/MainPage.module.scss
+++ b/frontend/src/components/MainPage/MainPage.module.scss
@@ -169,7 +169,7 @@
     grid-gap: 2.5rem;
     grid-template-columns: repeat(3, 1fr);
     padding: 2rem 0;
-    margin: 0 auto 10rem auto;
+    margin: 0 auto 0 auto;
     max-width: 115rem;
 
 
@@ -178,6 +178,30 @@
     box-sizing: border-box;
     // border: 1px solid #ddd;
 }
+
+.lineTitle {
+    display: flex;
+    text-align: center;
+    align-content: center;
+    align-items: center;
+    justify-content: center;
+    max-width: 115rem;
+    margin: 8rem auto;
+    .divLine {
+
+     
+        width: 100%;
+        height: 0;
+        border: .1px solid black;
+    }
+    }
+    .title {
+        font-size: 2.5rem;
+        white-space: nowrap;
+        margin: 0 2.5rem;
+    }   
+
+
 
 
 .grid {
@@ -190,7 +214,7 @@
     grid-template-columns: repeat(4, 1fr);
     
     padding: 2rem 2rem;
-    margin: 0 auto 0 auto;
+    margin: 0 auto 4rem auto;
     max-width: 115rem;
 }
 
@@ -289,6 +313,8 @@
 
             .mainButton {
                 z-index: 3;
+                width: 6rem;
+                text-align: center;
                 // position: relative;
                  //margin: 20px 0;
                 // left: 0;
