--- a/frontend/src/components/MainPage/MainPage.module.scss
+++ b/frontend/src/components/MainPage/MainPage.module.scss
@@ -164,8 +164,8 @@
 
 .displayContainer {
     display: grid;
-    grid-auto-rows: auto;
-    grid-auto-rows: minmax(100px, auto);
+    //grid-auto-rows: auto;
+    grid-template-rows: minmax(10rem, auto);
     grid-gap: 2.5rem;
     grid-template-columns: repeat(3, 1fr);
     padding: 2rem 0;
@@ -186,7 +186,7 @@
     align-items: center;
     justify-content: center;
     max-width: 115rem;
-    margin: 8rem auto;
+    margin: 7rem auto;
     .divLine {
 
      
@@ -346,3 +346,58 @@
     
     
 }
+
+
+//? media queries
+
+
+@media (max-width: 1200px) {
+    .displayContainer {
+       // grid-template-columns: repeat(1, 1fr);
+        margin: 0 2rem;
+        //padding: 2rem 2rem;
+     
+    }
+
+
+}
+
+@media (max-width: 990px) {
+
+    .grid {
+    
+        grid-template-columns: repeat(2, 1fr);
+        
+        padding: 2rem 2rem;
+        margin: 0 auto 4rem auto;
+        max-width: 115rem;
+    }
+
+    .lineTitle {
+        margin: 5rem auto;
+    }
+
+}
+
+@media (max-width:768px) {
+    .displayContainer {
+        //grid-template-rows: minmax(25rem, auto);
+         grid-template-columns: repeat(1, 1fr);
+         margin: 0 2rem;
+         //padding: 2rem 2rem;
+      
+     }
+     
+     .grid {
+        grid-template-columns: repeat(1, 1fr);
+        
+     }
+
+     .imgOverlay {
+        height: 350px;
+    }
+    .lineTitle {
+        margin: 4rem auto;
+    }
+}
+
