--- a/frontend/src/components/mainPageSales/MainSales.module.scss
+++ b/frontend/src/components/mainPageSales/MainSales.module.scss
@@ -306,8 +306,12 @@
 
  }
  
- @media (max-width: 600px) {
+ @media (max-width: 768px) {
+    .imgOverlay {
 
+        height: 400px;
+          
+      }
  }
  
  
