--- a/frontend/src/components/Cart/Cart.module.scss
+++ b/frontend/src/components/Cart/Cart.module.scss
@@ -1,106 +1,182 @@
-.container {
-    // height: 10vh;
-    // width: 100%;
-   
-    font-size: 1.8rem;
-    // display: flex;
-    // align-items: center;    //align with others
-    // justify-content: center; //move to center
+.mainContainer {
 
-
-    .title {
-        font-size: 3.5rem;
-        margin: 2rem auto;
-
-        display: flex;
-        align-items: center;
-        justify-content: center;
-      
-    }
-.imgC {
-    text-align: start;
-    padding: 0 0;
-   // display:grid;
-    height: 5rem;
-    width: 7rem;
-
-    .img {
-        // grid-column: 1 / -1;
-        // grid-row: 1 / -1;
-      //  max-width: 7rem;
-        //max-height: 7rem;
-        height: 100%;
-        width: 100%;
-        object-fit: cover;
-        background-position: center;
-    }
+  .fontSize {
+    font-size: 1.5rem;
 }
-    .flex {
-        max-width: 120rem;
-        display: flex;
+.fontSizeSm {
+   font-size: 1.3rem;
+}
 
-        justify-content: space-between;
-        align-items: center;
-        margin: 15rem auto 0 auto;
-        .table {
-            display: grid;
-    
-       
-            // border-collapse: collapse;
-            // border-spacing: 0;
-            // tr {
-            //     vertical-align: middle;
-            //     border:none;
-            // }
-          text-align: center;
-    
-    
-            width: 100%;
-      
+  ul {
+    list-style-type: none;
+}
 
-            .spacing {
-              &:first-child {
-                background-color:  rgba(222,215,226,.31);
-              }
-                display:inherit;
-                align-items: center;
-              //  justify-content: center;
-                grid-template-columns: 3rem 10rem 1fr repeat(3,12rem);
-              //  grid-template-rows: repeat(6,1fr);
-            }
-            .spacingItems {
-                padding: .8rem 0;
-            }
-            
-            // .itemThumbnail {
-            //    text-align: start;
-            //    width: 9rem;
-            // }
-
-            .categories {
-              //  width: 100%;
-              //  border: none;
-                background-color: #f7f7f7;
-                padding: 1.2rem 0;
-
-            }
-            
-            // .spacing {
-            //     padding: 1.2rem 0;
-            //     //width: 10rem;
-                .alignStart {
-                    text-align: start;
-                }
-            // }
-
+a {
+    color: var(--black);
+    text-decoration: none;
+  }
   
+  .title {
+    font-size: 2.5rem;
+    margin: 4rem auto 4rem auto;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .maxWidth {
+    max-width: 115rem;
+    margin: auto;
+
+    .wrapper {
+
+      flex: 1 1;
+      flex-wrap: wrap;
+      justify-content: space-between;
+    
+  
+    border: 0.1rem #c0c0c0 solid;
+    border-radius: 0.5rem;
+    background-color: #fcfcfc;
+    padding: 1rem;
+    //margin: 1rem;
+        li {
+          display: flex;
+          justify-content: space-between;
+          padding: 1rem 0;
+          margin-bottom: 0rem;
+          border-bottom: 0.1rem #c0c0c0 solid;
+  
+  
+        &:first-child{
+          display: flex;
+          justify-content: space-between;
+          align-items: flex-end;
+        }
+  
+        &:last-child {
+          border-bottom: none;
+        }
+  
+       
+  
+       }
+  
+       .cartItems {
+         
+          .cartImage {
+            .img {
+              max-width: 15rem;
+              max-height: 15rem;
+            }
+          }
+  
+          .itemFlex {
+            display: flex;
+            flex-direction: column;
+          //  justify-items: flex-start;
+         //   align-content: space-between;
+            justify-content: space-evenly;
+            
+            margin-left: .5rem;
+          //  align-content: flex-start;
+              flex: 8 1;
+    
+          }
+              
+          .cartPrice {
+            flex: 1 1;
+            font-size: 2rem;
+            text-align: right;
+          }
+
+          .itemRemove {
+            
+            .btnRemove {
+              border-bottom: .2px solid var(--black);
+              transition: all .1s ease;
+              &:hover {
+                
+               // color: var(--grey);
+                border-bottom: .2px solid transparent;
+              }
+          
+            }
+          }
+    
+       }
+    }
+
+
+    .subTotalDetails {
+    width: 100%;
+      display: flex;
+      justify-content: flex-end;
+
+ 
+  
+  
+       ul {
+        width: 40%;
+        border: 0.1rem #c0c0c0 solid;
+        border-radius: 0.5rem;
+        background-color: #fcfcfc;
+        padding: 1rem;
+        margin: 1rem 0;
+
+
+        &  > li {
+          display: flex;
+          justify-content: space-between;
+          margin-bottom: 1rem;
         }
 
 
-
-
+      & > li:nth-last-child(2) {
+        font-weight: bold;
+        color: #c04000;
+      }
+        }
+  
+  
+  
+  
+      .btnPrimary {
+        
+          border: 1px solid var(--black);
+          width: 100%;
+          height: 4rem;
+          text-align: center;
+          font-size: 2rem;
+          margin: 3rem 0;
+          transition: all 300ms ease;
+          background-color: var(--black);
+          color: var(--mainWhite);
+  
+          &:hover {
+            
+            background-color: var(--mainWhite);
+            color: var(--black);
+          }
+        }
     }
+  }
 
 
 
+
+
+}
+
+@media (max-width: 768px) {
+  .mainContainer {
+  .maxWidth {
+  .subTotalDetails {
+    ul {
+      width: 100%;
+    }
+  }
+}
+}
 }
