--- a/frontend/src/components/Details/Details.module.scss
+++ b/frontend/src/components/Details/Details.module.scss
@@ -27,7 +27,7 @@
 .grid {
   //background-color: var(--lightGrey);
   margin: 10rem auto;
-  max-width: 130rem;
+  max-width: 120rem;
   padding-left: 2rem;
 
   //background-color: var(--mainBlue);
@@ -38,7 +38,7 @@
   align-items: flex-start;
 
   .tinyGrid {
-    z-index: 10;
+    z-index: 5;
     display: grid;
 
     .image1 {
@@ -51,8 +51,8 @@
 
   .imgOverlay {
     
-    height: 60rem;
-    width: 55rem;
+    height: 40rem;
+    width: 40rem;
       //display: block;
      // overflow: hidden;
       position: relative;
@@ -73,13 +73,14 @@
         justify-content: space-evenly;
         padding-bottom: 4rem;
         margin-left: 2rem;
+        margin-right: 2rem;
     
         .title {
             font-size: 3rem;
             padding-bottom: 1.6rem;
         }
         .price {
-            font-size: 3.5rem;
+            font-size: 3rem;
             padding-bottom: 3rem;
         }
         .descript {
@@ -98,7 +99,7 @@
         align-items: center;
 
         .qtext {
-          font-size: 1.7rem;
+          font-size: 1.5rem;
         }
         .quantity {
           padding: 2.2rem;
@@ -107,7 +108,7 @@
          .button2, .button3 {
            color: var(--mainWhite);
            background-color:var(--mainDark);
-           margin-right: 1.8rem;
+           margin-right: 1.6rem;
            font-size: 1.5rem;
            user-select: none;
            
@@ -133,14 +134,18 @@
      
      }
     }
-    .stock {
-      margin-top: 1rem;
-    }
 
-    .category {
-     margin-top: 6rem;
- 
+    .statusWrap {
+      display: flex;
+      text-align: center;
+      margin-top: 2.2rem;
+      .stock {
+        margin-right: 2rem;
+  
+      }
+
     }
+  
 }
 
 
@@ -184,6 +189,212 @@
   text-decoration: none;
   color: var(--mainDark);
  }
+
+
+
+
+ @media (max-width: 980px) {
+  .grid {
+
+
+    .tinyGrid {
+  
+      z-index: 5;
+      display: grid;
+  
+      .image1 {
+        
+        height: 6.5rem;
+      }
+  
+    }
+  
+  
+    .imgOverlay {
+      height: 28rem;
+      width: 28rem;
+
+  
+      
+      
+    }
+        .contents {
+          order: 2;
+      
+          .title {
+              font-size: 2rem;
+              padding-bottom: 1.6rem;
+          }
+          .price {
+              font-size: 2rem;
+              padding-bottom: 2rem;
+          }
+          .descript {
+            margin-top: .7rem;
+              font-size: 1.3rem;
+            
+          }
+  
+        }
+
+
+   .listIcons {
+        .wrap {
+        margin-top: 4rem;
+
+        .quantity {
+          padding: 1.6rem;
+          margin-right: 1.2rem;
+        }
+          .button2, .button3 {
+            margin-right: 1.2rem;
+            font-size: 1.5rem;
+
+        }
+
+
+    }
+   }
+
+}
+
+.button2, .button3 {
+      padding: 1.5rem;
+  
+    
+  }
+
+
+      
+}
+
+
+
+
+
+
+
+
+ @media (max-width: 768px) {
+  .grid {
+
+    padding-right: 2rem;
+    justify-content: center;
+  
+    grid-template-columns:1fr;
+    grid-template-rows: repeat(3, auto);
+    grid-row-gap: 2rem;
+  
+    .tinyGrid {
+      order: 2;
+
+      .image1 {
+        
+        height: 7.5rem;
+      }
+  
+    }
+  
+  
+    .imgOverlay {
+      order: 1;
+      height: 100%;
+      width: 100%;
+    }
+        .contents {
+          order: 3;
+          margin-left: 0;
+      
+          .title {
+              padding: 2.5rem 0 3rem 0;
+          }
+          .price {
+              font-size: 3rem;
+              padding-bottom: 3rem;
+          }
+          .descript {
+            margin-top: 1rem;
+              font-size: 1.3rem;
+            
+          }
+  
+        }
+      }  
+}
+
+
+@media (max-width: 480px) {
+  .grid {
+
+    padding-left: 2rem;
+    padding-right: 2rem;
+
+  
+    .tinyGrid {
+      order: 2;
+
+      .image1 {
+        
+        height: 5.5rem;
+      }
+  
+    }
+
+    .listIcons {
+      .wrap {
+
+      .quantity {
+        padding: 1.6rem;
+        margin-right: 1.2rem;
+      }
+        .button2, .button3 {
+          margin-right: 1.2rem;
+          font-size: 1.5rem;
+
+      }
+
+
+  }
+ }
+
+ .button2, .button3 {
+   padding: 1.5rem;
+ }
+  
+
+  }  
+}
+
+@media (max-width: 350px) {
+  .grid {
+    .listIcons {
+      .wrap {
+       flex-wrap: wrap;
+        .liked {
+          font-size: 2.5rem;
+        }
+      }
+    }
+  }
+}
+
+
+@media (max-width: 305px) {
+  .grid {
+    .listIcons {
+      .wrap {
+       flex-wrap: wrap;
+       .quantity {
+         margin-bottom: 1rem;
+       }
+        .liked {
+          font-size: 2.5rem;
+        }
+      }
+    }
+  }
+}
+
 
 
 
