--- a/frontend/src/components/Footer/Footer.module.scss
+++ b/frontend/src/components/Footer/Footer.module.scss
@@ -1,11 +1,24 @@
 .container {
+
     color: var(--mainWhite);
     background-color: var(--black);
-    height: 40vh;
+    height: auto;
+
+    ul {
+        list-style: none;
+        // margin: 0;
+        // padding: 0;
+      }
+      
+      a {
+       color: var(--mainWhite);
+        text-decoration: none;
+      }
+
 
 
     .innerContainer {
-        margin: 2rem 1rem 0 1rem;
+     //   margin: 2rem 1rem 0 1rem;
         display: grid;
         grid-template-columns: repeat(4, 1fr);
         grid-template-rows: repeat(1,1fr);
@@ -13,7 +26,7 @@
         max-width: 115rem;
         width: 100%;
         margin: 0 auto;
-        padding: 5rem 0;
+        padding: 2rem 0 0 0;
     }
 
     .textLarge {
@@ -41,9 +54,51 @@
 
     .copyRight {
         text-align: center;
+        width: 100%;
         padding-bottom: 2rem;
+        padding-top: 2rem;
         background-color: var(--black);
         font-size: 1.2rem;
 
     }
+}
+
+@media (max-width:1200px) {
+
+    .container {
+        padding-left: 2rem;
+        padding-right: 2rem;
+ 
+        .innerContainer {
+        
+            //padding: 2rem 2rem 0 2rem;
+        }
+
+        // .copyRight{
+        //     padding-left: 2rem;
+        //     padding-right: 2rem;
+        // }
+    }
+
+ 
+    
+}
+
+@media (max-width:990px) {
+
+    .container {
+       // height: auto;
+    
+
+    .innerContainer {
+    
+        // margin: 2rem 1rem 0 1rem;
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(2, 1fr);
+         grid-gap: 3rem;
+        // max-width: 115rem;
+        // width: 100%;
+        // margin: 0 auto;
+    }
+}
 }
