--- a/frontend/src/components/Navbar/Navbar.module.scss
+++ b/frontend/src/components/Navbar/Navbar.module.scss
@@ -22,16 +22,7 @@
   //   --speed: 500ms; 
   // }
   
-  ul {
-    list-style: none;
-    // margin: 0;
-    // padding: 0;
-  }
-  
-  a {
-    color: var(--mainWhite);
-    text-decoration: none;
-  }
+
   
 
 
@@ -120,6 +111,19 @@ list-style: none;
 
 //? navbar start
 .mainNavContainer {
+  ul {
+    list-style: none;
+    // margin: 0;
+    // padding: 0;
+  }
+  
+  a {
+  //  color: var(--mainWhite);
+    text-decoration: none;
+  }
+
+
+
   //padding: 8rem auto;
   position: absolute;
   z-index: 10;
@@ -418,6 +422,20 @@ list-style: none;
  
   }
 
+
+  @media (max-width: 480px) {
+    .mobileIcon {
+      z-index: 20;
+      font-size: 1.6rem;
+      width: 2.5rem;
+
+      padding:.1rem .5rem .1rem .5rem;
+      margin: .1rem .5rem .1rem 0;
+
+    
+    
+    }
+}
 
 
 
