--- a/frontend/src/components/ProductItem/ProductItem.module.scss
+++ b/frontend/src/components/ProductItem/ProductItem.module.scss
@@ -277,18 +277,38 @@
 //? list view description
 .contNope {
   
-    justify-content: space-evenly;
+   // justify-content: space-evenly;
     padding-bottom: 4rem;
     margin-left: 2rem;
+
 
     .title {
         font-size: 2.5rem;
         padding-bottom: 1.6rem;
     }
+
     .price {
         font-size: 2rem;
-        padding-bottom: 3rem;
+       padding-top:.5rem;
+       padding-bottom: 3rem;
     }
+
+    .discountWrapper {
+        display: flex;
+        align-content: center;
+        
+        .sale{
+            font-size: 1rem;
+            padding-left: .5rem;
+
+        }
+
+        // .price {
+        //   font-size: 2rem;
+        //   padding-bottom: 3rem;
+        // }
+    }
+
     .descript {
         font-size: 1.5rem;
       
