edit comment and css

--- a/frontend/src/App.module.scss
+++ b/frontend/src/App.module.scss
@@ -20,6 +20,8 @@ body {
 }
 
 
+
+
 :root {
     --hoverColor: #ffc60032;
     --lightBlack: #242526;
@@ -32,5 +34,6 @@ body {
     --mainDark: #232528;
     --mainYellow: #ffc60032; //todo REMOVE
     --orange: orange;
-    --red: red;
+    --red:  rgb(134, 11, 11);
+    --red2: #c04000;
 }
