--- a/frontend/src/components/CheckoutSteps/CheckoutSteps.module.scss
+++ b/frontend/src/components/CheckoutSteps/CheckoutSteps.module.scss
@@ -1,7 +1,7 @@
 .checkoutSteps {
     display: flex;
     justify-content: space-between;
-    width: 40rem;
+    max-width: 40rem;
     margin: 4.5rem auto 0 auto;
 
     
