--- a/frontend/src/components/Details/Details.module.scss
+++ b/frontend/src/components/Details/Details.module.scss
@@ -1,13 +1,35 @@
-.container {
- //background-color: orangered;
-}
+
 
 //?global start
 .ratingRedirect {
   text-decoration: none;
 }
+
+// Global
+.cStyle {
+  text-decoration: none;
+  color: var(--mainDark);
+ }
 //? end
 
+
+
+//? PAGE CONTAINER
+.container {
+  //background-color: orangered;
+ 
+  .widthContainer {
+ // background-color: orange;
+  margin: 10rem auto;
+  max-width: 120rem;
+  //padding-left: 2rem;
+  
+
+  ul {
+   list-style: none;
+  }
+ 
+ 
 .titleContainer {
   margin: 4.5rem auto;
 }
@@ -114,7 +136,7 @@
          .button2, .button3 {
            color: var(--mainWhite);
            background-color:var(--mainDark);
-           margin-right: 1.6rem;
+          //  margin-right: 1.6rem;
            font-size: 1.5rem;
            user-select: none;
            
@@ -191,6 +213,8 @@
 }
 
 
+//! page Divider 
+
 .lineTitle {
   display: flex;
   flex-direction: column;
@@ -210,15 +234,132 @@
   }
   }
 
-// Global
-.cStyle {
-  text-decoration: none;
-  color: var(--mainDark);
- }
 
+
+
+//! page reviews
+
+
+.reviewPageWrapper {
+  padding: 0 2rem;
+ // width: 100%;
+
+
+  .reviewTitle {
+    text-align: left;
+    font-size: 2rem;
+    padding-bottom: 1rem;
+  }
+
+
+  .commentReviewContainer  {
+    // max-width: 115rem;
+    // margin: auto;
+    //margin: 4rem auto;
+    display: flex;
+    flex-wrap: wrap;
+    //justify-content: space-evenly;
+    //align-items: center;
+   // height: 100%;
+
+    .subReviewContainer {
+      order: 2;
+      flex: 1 1 50rem;
+      
+    .review {
+      //padding: 0 2rem;
+  
+      
+      
+      .reviewSingle {
+        margin-bottom: 4rem;
+      }
+      li > div {
+        text-align: left;
+       // color: blue;
+
+        &:first-child {
+          font-size: 1.4rem;
+          font-weight: bold;
+        }
+
+        &:nth-child(2) {
+          align-items: right;
+        }
+
+        &:last-child {
+          margin-top: 1rem;
+          font-size: 1.2rem;
+
+        }
+      }
+    
+  
+    }
+      
+  }
+  
+    .commentContainer {
+      flex: 1 1 40rem;
+      order: 1;
+      margin-bottom: 3rem;
+      //margin-right: 5rem;
+     // width: 20rem;
+
+
+      .subContainer {
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        align-content: flex-start;
+        padding: 2rem;
+        border: .1rem var(--black) solid;
+        border-radius: .5rem;
+        list-style-type: none;
+        max-width: 25rem;
+        .formContainer {
+
+
+
+
+          .ratingWidth {
+            width: 100%;
+            min-height: 3rem;
+            border: .1rem var(--black) solid;
+          }
+          .commentWidth {
+            border: .1rem var(--black) solid;
+            width: 100%;
+            min-height: 5rem;
+          }
+        }
+        .signIn {
+          margin: 2rem 0;
+        }
+      }
+
+      
+    }
+  
+      
+  
+  }
+
+
+  
+}
+
+
+}
+}
+  
+
+
+//! media queries
 
  @media (max-width:1200px) {
-
+   .container {
+   .widthContainer {
   .lineTitle {
       padding-left: 2rem;
       padding-right: 2rem;
@@ -230,12 +371,15 @@
   }
 
 
-  
 }
+}
+ }
 
 
 
  @media (max-width: 980px) {
+   .container {
+  .widthContainer {
   .grid {
 
 
@@ -288,8 +432,11 @@
           padding: 1.6rem;
           margin-right: 1.2rem;
         }
-          .button2, .button3 {
-            margin-right: 1.2rem;
+        .button2 {
+          padding:1.6rem;
+        }
+           .button3 {
+           margin-right: 1.2rem;
             font-size: 1.5rem;
 
         }
@@ -310,29 +457,31 @@
       
 }
 
-
-
+ }
+ }
 
 
 
 
 
  @media (max-width: 768px) {
+   .container {
+  .widthContainer {
   .grid {
 
     padding-right: 2rem;
     justify-content: center;
   
-    grid-template-columns:1fr;
-    grid-template-rows: repeat(3, auto);
+    grid-template-columns:1fr 1fr;
+    grid-template-rows: repeat(2, auto);
     grid-row-gap: 2rem;
   
     .tinyGrid {
-      order: 2;
+      order: 3;
 
       .image1 {
         
-        height: 7.5rem;
+        height: 8.5rem;
       }
   
     }
@@ -342,9 +491,12 @@
       order: 1;
       height: 100%;
       width: 100%;
+      .image {
+      
+      }
     }
         .contents {
-          order: 3;
+          order: 2;
           margin-left: 0;
       
           .title {
@@ -363,9 +515,73 @@
         }
       }  
 }
+ }
+}
+
+
+
+@media (max-width: 650px) {
+  .container {
+    .widthContainer {
+    .grid {
+  
+      padding-right: 2rem;
+      justify-content: center;
+    
+      grid-template-columns:1fr;
+      grid-template-rows: repeat(3, auto);
+      grid-row-gap: 2rem;
+    
+      .tinyGrid {
+        order: 2;
+  
+        .image1 {
+          
+          height: 8.5rem;
+        }
+    
+      }
+    
+    
+      .imgOverlay {
+        order: 1;
+        height: 100%;
+        width: 100%;
+        .image {
+        
+        }
+      }
+          .contents {
+            order: 3;
+            margin-left: 0;
+            padding-bottom: 0;
+        
+            .title {
+                padding: 2.5rem 0 3rem 0;
+            }
+            .price {
+                font-size: 3rem;
+                padding-bottom: 3rem;
+            }
+            .descript {
+              margin-top: 1rem;
+                font-size: 1.3rem;
+              
+            }
+    
+          }
+        }  
+  }
+   }
+}
+
+
+
 
 
 @media (max-width: 480px) {
+  .container {
+    .widthContainer {
   .grid {
 
     padding-left: 2rem;
@@ -390,7 +606,7 @@
         margin-right: 1.2rem;
       }
         .button2, .button3 {
-          margin-right: 1.2rem;
+          // margin-right: 1.2rem;
           font-size: 1.5rem;
 
       }
@@ -406,8 +622,12 @@
 
   }  
 }
+}
+}
 
 @media (max-width: 350px) {
+  .container {
+    .widthContainer {
   .grid {
     .listIcons {
       .wrap {
@@ -419,9 +639,12 @@
     }
   }
 }
-
+}
+}
 
 @media (max-width: 305px) {
+  .container {
+    .widthContainer {
   .grid {
     .listIcons {
       .wrap {
@@ -436,9 +659,9 @@
     }
   }
 }
+}
 
-
-
+}
 
 
 
