--- a/frontend/src/components/Footer/Footer.module.scss
+++ b/frontend/src/components/Footer/Footer.module.scss
@@ -1,9 +1,10 @@
 .container {
-
+   // width: 100%;
+    //position: absolute;
     color: var(--mainWhite);
     background-color: var(--black);
     height: auto;
-
+    bottom: 0;
     ul {
         list-style: none;
         // margin: 0;
@@ -50,6 +51,10 @@
         width: 1.5rem;
         height: 1.5rem;
         margin-right: 1rem;
+        transition: all .2s ease;
+        &:hover {
+            color: var(--grey);
+          }
     }
 
     .copyRight {
