--- a/frontend/src/components/OrderMenu/OrderMenu.module.scss
+++ b/frontend/src/components/OrderMenu/OrderMenu.module.scss
@@ -1,1 +1,158 @@
-//! include css from order...
+
+.mainContainer  {
+
+
+    //?page globals start
+    .button {
+                
+        margin: 0;
+        z-index: 3;
+       // width: 100%;
+        text-align: center;
+        border-radius: .5rem;
+        cursor:pointer;
+        text-decoration: none;
+        background:var(--mainDark);
+        text-transform: uppercase;
+        color:var(--mainWhite);
+        padding: 1rem 1.5rem;
+        transition: all 250ms ease-out;
+
+        &:hover {
+            color:var(--mainDark);
+            background-color: var(--lightGrey);
+        }
+    }
+    //? page globals end
+
+
+    .content {
+       
+        //background-color: RED;
+        max-width: 115rem;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        flex-wrap: wrap;
+        justify-content: center;
+        margin:6rem auto 10rem auto;
+        padding: 0 2rem;
+    
+    
+        .productHeader {
+            font-size: 2.5rem;
+        }
+    
+        .productList {
+            min-height: 50vh;
+            //display: flex;
+            margin-top: 6rem;
+            // flex: 1 1 0;
+    
+            a {
+                text-decoration: none;
+                color: var(--red);
+                transition: all .3s ease;
+                &:hover {
+                    color: var(--black);
+                }
+            }
+            
+        .table {
+            
+            width: 100%;
+            
+         
+            tr {
+                width: auto;
+                text-align: center;
+                white-space: nowrap;
+        
+                font-size: 1.1rem;
+    
+                th {
+                    min-width: 5rem;
+                    font-size: 1.3rem;
+                    text-align: left;
+                }
+            }
+            tbody > tr:nth-child(odd) {
+                background-color: var(--lightGrey);
+            }
+    
+        }
+        }
+    
+    }
+}
+
+//! media queries
+
+//950px
+@media (max-width: 59.375rem) {
+    .mainContainer {
+
+        .content {
+            .productList {
+                .table {
+                    display: block; // needed for overflow
+                    
+                    overflow-x: auto;  
+                    width: 65rem;
+                }
+            }
+        }
+    }
+ }
+
+
+//850px
+@media (max-width: 53.125rem) {
+    .mainContainer {
+
+        .content {
+            .productList {
+                .table {
+                    display: block; // needed for overflow
+                    overflow-x: auto;  
+                    width: 55rem;
+                }
+            }
+        }
+    }
+ }
+
+
+    
+//600px
+@media (max-width: 37.5rem) {
+    .mainContainer {
+
+        .content {
+            .productList {
+                .table {
+                    display: block; // needed for overflow
+                    overflow-x: auto;  
+                    width: 42rem;
+                }
+            }
+        }
+    }
+    }
+
+
+//460px
+@media (max-width: 28.75rem) {
+    .mainContainer {
+
+        .content {
+            .productList {
+                .table {
+                    display: block; // needed for overflow
+                    overflow-x: auto;  
+                    width: 26rem;
+                }
+            }
+        }
+    }
+    }
