--- a/frontend/src/components/PaymentPage/PaymentPage.module.scss
+++ b/frontend/src/components/PaymentPage/PaymentPage.module.scss
@@ -1,14 +1,23 @@
 .form {
-    margin:4rem auto;
+    margin:0 auto;
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100%;
+    min-height: 70vh;
 
-    .formContainer {
+
+    .formContainer{
+        max-width: 32rem;
+        flex: 1 1 0;
+
+
+    .formSubContainer {
+        //text-align: center;
         display: flex;
+       // flex: 1 1 0;
         flex-direction: column;
-        width: 32rem;
+      // width: 32rem;
+        //width: 100%;
         padding: 2rem;
         border: .1rem var(--black) solid;
         border-radius: .5rem;
@@ -24,11 +33,16 @@
             margin-bottom: 1rem;
             margin-top: 1rem;
         }
+        .radioFlex {
+            display: flex;
+            align-items: center;
+        }
 
         input {
             padding: 1rem;
             border: .1rem var(--black) solid;
             border-radius: .5rem;
+            margin-right: 1rem;
         }
 
         .text {
@@ -56,7 +70,7 @@
             }
         }
     }
-  
+}
 
 
 }
