--- a/frontend/src/components/Shipping/Shipping.module.scss
+++ b/frontend/src/components/Shipping/Shipping.module.scss
@@ -3,12 +3,18 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100%;
+    min-height: 70vh;
+
 
     .formContainer {
+        max-width: 38rem;
+        flex: 1 1 0;
+
+
+    .formSubContainer {
         display: flex;
         flex-direction: column;
-        width: 32rem;
+      //  width: 32rem;
         padding: 2rem;
         border: .1rem var(--black) solid;
         border-radius: .5rem;
@@ -56,6 +62,7 @@
             }
         }
     }
+}
   
 
 
