--- a/frontend/src/components/Footer/Footer.module.scss
+++ b/frontend/src/components/Footer/Footer.module.scss
@@ -1,14 +1,11 @@
 .container {
-   // width: 100%;
-    //position: absolute;
     color: var(--mainWhite);
     background-color: var(--black);
     height: auto;
     bottom: 0;
     ul {
         list-style: none;
-        // margin: 0;
-        // padding: 0;
+
       }
       
       a {
@@ -28,7 +25,7 @@
         width: 100%;
         margin: 0 auto;
         padding: 2rem 0 0 0;
-    }
+    
 
     .textLarge {
         font-weight: 700;
@@ -47,6 +44,10 @@
         letter-spacing: .2rem;
     }
 
+    .iconsWrapper {
+        margin-top: 1.8rem;
+    }
+
     .icons {
         width: 1.5rem;
         height: 1.5rem;
@@ -57,15 +58,17 @@
           }
     }
 
-    .copyRight {
-        text-align: center;
-        width: 100%;
-        padding-bottom: 2rem;
-        padding-top: 2rem;
-        background-color: var(--black);
-        font-size: 1.2rem;
 
-    }
+}
+.copyRight {
+    text-align: center;
+    width: 100%;
+    padding-bottom: 2rem;
+    padding-top: 2rem;
+    background-color: var(--black);
+    font-size: 1.2rem;
+
+}
 }
 
 @media (max-width:1200px) {
@@ -74,15 +77,6 @@
         padding-left: 2rem;
         padding-right: 2rem;
  
-        .innerContainer {
-        
-            //padding: 2rem 2rem 0 2rem;
-        }
-
-        // .copyRight{
-        //     padding-left: 2rem;
-        //     padding-right: 2rem;
-        // }
     }
 
  
@@ -92,18 +86,14 @@
 @media (max-width:990px) {
 
     .container {
-       // height: auto;
+
     
 
     .innerContainer {
-    
-        // margin: 2rem 1rem 0 1rem;
         grid-template-columns: repeat(2, 1fr);
         grid-template-rows: repeat(2, 1fr);
          grid-gap: 3rem;
-        // max-width: 115rem;
-        // width: 100%;
-        // margin: 0 auto;
+
     }
 }
 }
