--- a/frontend/src/components/Register/Register.module.scss
+++ b/frontend/src/components/Register/Register.module.scss
@@ -3,7 +3,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100%;
+    min-height: 70vh;
 
     .formContainer {
         display: flex;
